# applicazione_decentralizzata

./: Cargo.toml  README.md
src/: main.rs
src/moduli/: elaborazione_dati.rs  mod.rs  raccolta_dati.rs  streams.rs
