[package]
name = "applicazione_decentralizzata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
tokio = {version = "1.32.0", features = ["full"]}
iota-streams = { git = "https://github.com/iotaledger/streams", branch = "develop" }
iota-crypto = { git = "https://github.com/iotaledger/crypto.rs", features = ["random"], branch = "dev" }
allow = "0.1.5"
rand = "0.8.5"
chrono = "0.4.31"